<resources>
    <string name="app_name">SurWay</string>
    <string name="tab_all_surveys_title">All surveys</string>
    <string name="tab_my_surveys_title">My surveys</string>
    <string name="title_activity_auth">Sign in</string>
    <string name="prompt_email">Эл. адрес</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_repeat_password">Повтор пароля</string>
    <string name="prompt_full_name">Полное имя</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auth_register_link_text"><u>Already have an account?</u></string>
    <string name="title_activity_surveys">Главная</string>
</resources>
